examples/error-codes/undefined/UB-CEE1-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.

int main(void){
	register int a[10] = {0};
	a[5];
	return 0;
}
